--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,6 +69,13 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # Download .env from S3
+      - name: Download .env from S3
+        run: node downloadFromS3.js
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       # Download AWS CLI 2
       - name: Install AWS CLI 2
         run: |
