--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "prebuild": "concurrently \"aws s3 cp s3://sparta-final-project-beanstalk-test-env/.env .env\"",
+    "prebuild": "node download-env-from-s3.js",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -25,6 +25,7 @@
     "db:drop": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs db:drop -d ./ormconfig.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.624.0",
     "@faker-js/faker": "^8.4.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
