--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -100,22 +100,13 @@ jobs:
       - name: Run build
         run: npm run build
 
-      # List files before generating the zip
-      - name: List files before zipping
-        run: ls -la
-
       # Generate deployment package
       - name: Generate deployment package
-        run: |
-          zip -r deploy.zip . -x '*.git*' './aws/*' './node_modules/*' './dist/*' awscliv2.zip
-
-      # List files after generating the zip
-      - name: List files after zipping
-        run: ls -la
+        run: zip -r deploy.zip . -x '*.git*' './aws/*' './node_modules/*' './dist/*' awscliv2.zip
 
       # Deploy to Elastic Beanstalk
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
+        uses: einaregilsson/beanstalk-deploy@v20
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -123,3 +114,4 @@ jobs:
           environment_name: ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}
           region: ap-northeast-2
           version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
