--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -112,6 +112,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: ${{ secrets.AWS_EB_APPLICATION_NAME }}
           environment_name: ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}
+          version_label: ${{ github.run_number }}
+          use_existing_version_if_available: true
           region: ap-northeast-2
-          version_label: ${{ github.sha }}
           deployment_package: deploy.zip
