--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,15 +23,12 @@ jobs:
           node-version: 16.x
 
       - name: npm install # package.json에 있는 의존성 파일들을 설치해준다.
-        working-directory: ./WEB(BE)
         run: npm install
 
       - name: npm compile with babel # babel을 이용하여 es5로의 컴파일을 진행해준다.
-        working-directory: ./WEB(BE)
         run: npm run compile # npx babel src --out-dir dist(실제 실행되는 명령어)
 
       - name: make zip file # 압축 파일을 만들어준다.
-        working-directory: ./WEB(BE)
         run: zip -r app.zip package.json ./dist
 
       # Deploy to Elastic Beanstalk
@@ -45,4 +42,4 @@ jobs:
           version_label: ${{ github.run_number }}
           use_existing_version_if_available: true
           region: ap-northeast-2
-          deployment_package: ./WEB(BE)/app.zip
+          deployment_package: app.zip
