--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: npm compile with babel # babel을 이용하여 es5로의 컴파일을 진행해준다.
-        run: npm run compile # npx babel src --out-dir dist(실제 실행되는 명령어)
+        run: npm run build # npx babel src --out-dir dist(실제 실행되는 명령어)
 
       - name: make zip file # 압축 파일을 만들어준다.
         run: zip -r app.zip package.json ./dist
