--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,10 +2,10 @@ name: Backend CI/CD
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    types: [opened, reopened, synchronize]
-    branches: [main]
+    branches: main
 
   workflow_dispatch:
 
@@ -14,32 +14,20 @@ jobs:
     runs-on: ubuntu-latest # action이 구동될 OS 환경을 세팅해준다.
 
     steps:
-      - name: Checkout
+      - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: Set up Node # action이 구동될 Node 환경을 세팅해준다.
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20.x
-
-      - name: npm install # package.json에 있는 의존성 파일들을 설치해준다.
-        run: npm install
-
-      - name: npm compile with babel # babel을 이용하여 es5로의 컴파일을 진행해준다.
-        run: npm run build # npx babel src --out-dir dist(실제 실행되는 명령어)
-
-      - name: make zip file # 압축 파일을 만들어준다.
-        run: zip -r app.zip package.json ./dist
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
       # Deploy to Elastic Beanstalk
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v20
+        uses: einaregilsson/beanstalk-deploy@v22
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: ${{ secrets.AWS_EB_APPLICATION_NAME }}
           environment_name: ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}
           version_label: ${{ github.run_number }}
-          use_existing_version_if_available: true
           region: ap-northeast-2
-          deployment_package: app.zip
+          deployment_package: deploy.zip
