--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -94,11 +94,11 @@ jobs:
 
       # Make ZIP file with source code
       - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*' './node_modules/*' './src/*' './aws/*' awscliv2.zip
+        run: zip -r deploy.zip . -x '*.git*' './node_modules/*' awscliv2.zip
 
       # Deploy to Elastic Beanstalk
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v16
+        uses: einaregilsson/beanstalk-deploy@v22
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -108,3 +108,4 @@ jobs:
           version_label: ${{ github.SHA }}
           deployment_package: deploy.zip
           use_existing_version_if_available: true
+          wait_for_environment_recovery: 180
