--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -105,7 +105,7 @@ jobs:
           application_name: ${{ secrets.AWS_EB_APPLICATION_NAME }}
           environment_name: ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}
           region: ap-northeast-2
-          version_label: ${{ github.SHA }}
+          version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
           deployment_package: deploy.zip
           use_existing_version_if_available: true
           wait_for_environment_recovery: 180
